--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <link rel="stylesheet" type="text/css" href="semantic/components/icon.css">
         <link rel="stylesheet" type="text/css" href="semantic/components/transition.css">
 
-        <script
+        <!-- script
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="semantic/semantic.min.js"></script>
         <script src="semantic/components/transition.js"></script>
         <script src="semantic/components/dropdown.js"></script>
