--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           <div class="ui text container">
             <div class="overlay">
                 <div class="ui labeled icon vertical menu">
-                  <a class="item" href="https://twitter.com/bluewhitered123"><i class="twitter icon"></i> </a>
-                  <a class="item" href="https://www.facebook.com/kouki.takeda.146"><i class="facebook icon"></i> </a>
+                  <!--a class="item" href="https://twitter.com/bluewhitered123"><i class="twitter icon"></i> </a>
+                  <a class="item" href="https://www.facebook.com/kouki.takeda.146"><i class="facebook icon"></i> </a-->
                   <a class="item" href="https://note.com/kokemori_trip"><img class="note" src="static/img/logo/logo_symbol.png" alt="note" width="40" height="40" style="display: block; margin: auto;"></a>
                 </div>
             </div>
