--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
           </div-->
         
           <div class="ui text container">
-            <div class="overlay">
+            <!--div class="overlay">
                 <div class="ui labeled icon vertical menu">
-                  <!--a class="item" href="https://twitter.com/bluewhitered123"><i class="twitter icon"></i> </a>
-                  <a class="item" href="https://www.facebook.com/kouki.takeda.146"><i class="facebook icon"></i> </a-->
+                  <a class="item" href="https://twitter.com/bluewhitered123"><i class="twitter icon"></i> </a>
+                  <a class="item" href="https://www.facebook.com/kouki.takeda.146"><i class="facebook icon"></i> </a>
                   <a class="item" href="https://note.com/kokemori_trip"><img class="note" src="static/img/logo/logo_symbol.png" alt="note" width="40" height="40" style="display: block; margin: auto;"></a>
                 </div>
-            </div>
+            </div-->
 
             <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
             <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
