--- a/pages/chairReports.html
+++ b/pages/chairReports.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>VIRchairL INSANITY Research Reports</title>
+		<title>chair-reports</title>
         <!-- Standard Meta -->
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
         <!-- Site Properties -->
-		<link rel="stylesheet" type="text/css" href="semantic/semantic.min.css">
+		<link rel="stylesheet" type="text/css" href="../semantic/semantic.min.css">
 
-        <link rel="stylesheet" type="text/css" href="semantic/components/reset.css">
-        <link rel="stylesheet" type="text/css" href="semantic/components/site.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/reset.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/site.css">
 
-        <link rel="stylesheet" type="text/css" href="semantic/components/container.css">
-        <link rel="stylesheet" type="text/css" href="semantic/components/grid.css">
-        <link rel="stylesheet" type="text/css" href="semantic/components/header.css">
-        <link rel="stylesheet" type="text/css" href="semantic/components/image.css">
-        <link rel="stylesheet" type="text/css" href="semantic/components/menu.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/container.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/grid.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/header.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/image.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/menu.css">
 
-        <link rel="stylesheet" type="text/css" href="semantic/components/divider.css">
-        <link rel="stylesheet" type="text/css" href="semantic/components/list.css">
-        <link rel="stylesheet" type="text/css" href="semantic/components/segment.css">
-        <link rel="stylesheet" type="text/css" href="semantic/components/dropdown.css">
-        <link rel="stylesheet" type="text/css" href="semantic/components/icon.css">
-        <link rel="stylesheet" type="text/css" href="semantic/components/transition.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/divider.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/list.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/segment.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/dropdown.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/icon.css">
+        <link rel="stylesheet" type="text/css" href="../semantic/components/transition.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="semantic/semantic.min.js"></script>
-        <script src="semantic/components/transition.js"></script>
-        <script src="semantic/components/dropdown.js"></script>
-        <script src="semantic/components/visibility.js"></script>
+        <script src="../semantic/semantic.min.js"></script>
+        <script src="../semantic/components/transition.js"></script>
+        <script src="../semantic/components/dropdown.js"></script>
+        <script src="../semantic/components/visibility.js"></script>
 
-        <script src="static/script/main.js"></script>
-        <link rel="stylesheet" type="text/css" href="static/css/main.css">
+        <script src="../static/script/main.js"></script>
+        <link rel="stylesheet" type="text/css" href="../static/css/main.css">
 
 	</head>
 	<body>
         <div class="ui main text container">
-            <h1 class="ui header">welcome to VIRchairL INSANITY Research Reports</h1>
-            <p>devloper : koki takeda</p>
+            <h1 class="ui header">chair-reports</h1>
             <div class="ui menu">
                 <div class="menu">
                     <div id="js-sidebar" class="item">List</div>
@@ -47,7 +46,7 @@
                 <div class="right menu">
                     <a class="item" href="https://twitter.com/bluewhitered123"><i class="twitter icon"></i></a>
                     <a class="item" href="https://www.facebook.com/kouki.takeda.146"><i class="facebook icon"></i></a>
-                    <a class="item" href="https://note.com/kokemori_trip"><img class="note" src="static/img/logo/logo_symbol_black.png" alt="note" width="15" height="35"></a>
+                    <a class="item" href="https://note.com/kokemori_trip"><img class="note" src="../static/img/logo/logo_symbol_black.png" alt="note" width="15" height="35"></a>
                   </div>
             </div>
             
@@ -65,12 +64,9 @@
                 Home
             </a>
             <a class="item">
-                ぶちょーのメモ
-            </a>
-            <a class="item">
                 委託調査申込書
             </a>
-            <a href="pages/chairReports.html" class="item">
+            <a class="item">
                 xx区x丁目xx08椅子に関する調査書
             </a>
         </div>
@@ -80,8 +76,9 @@
             <div class="ui text container">
                 <div class="header item">
                     <!--img class="logo" src="assets/images/logo.png"-->
-                    Home
+                    chair-reports
                 </div>
+                <a href="../index.html" class="item">Back to Home</a>
                 <a href="" class="ui right floated dropdown item">
                     Index <i class="dropdown icon"></i>
                     <div class="menu">
@@ -116,17 +113,17 @@
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-        <img class="ui medium left floated image" data-src="static/img/logo/logo_symbol.png">
+        <img class="ui medium left floated image" data-src="../static/img/logo/logo_symbol.png">
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
-        <img class="ui medium right floated image" data-src="static/img/logo/logo_symbol.png">
+        <img class="ui medium right floated image" data-src="../static/img/logo/logo_symbol.png">
         Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-        <img class="ui medium left floated image" data-src="static/img/logo/logo_symbol.png">
+        <img class="ui medium left floated image" data-src="../static/img/logo/logo_symbol.png">
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
-        <img class="ui medium right floated image" data-src="static/img/logo/logo_symbol.png">
+        <img class="ui medium right floated image" data-src="../static/img/logo/logo_symbol.png">
         Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
@@ -136,20 +133,20 @@
             <div class="ui container">
               <div class="ui stackable inverted divided equal height stackable grid">
                 <div class="three wide column">
-                  <h4 class="ui inverted header">List</h4>
+                  <h4 class="ui inverted header">About</h4>
                   <div class="ui inverted link list">
-                    <a href="#" class="item">Home</a>
-                    <a href="#" class="item">ぶちょーのメモ</a>
-                    <a href="#" class="item">委託調査申込書</a>
-                    <a href="#" class="item">xx区x丁目xx08椅子に関する調査書</a>
+                    <a href="#" class="item">Sitemap</a>
+                    <a href="#" class="item">Contact Us</a>
+                    <a href="#" class="item">Religious Ceremonies</a>
+                    <a href="#" class="item">Gazebo Plans</a>
                   </div>
                 </div>
                 <div class="three wide column">
-                  <h4 class="ui inverted header">Devloper Contact</h4>
+                  <h4 class="ui inverted header">Contact</h4>
                   <div class="ui inverted link list">
                     <a class="item" href="https://twitter.com/bluewhitered123"><i class="twitter icon"></i>@bluewhitered123</a>
                     <a class="item" href="https://www.facebook.com/kouki.takeda.146"><i class="facebook icon"></i>koki takeda</a>
-                    <a class="item" href="https://note.com/kokemori_trip"><img class="note" src="static/img/logo/logo_symbol.png" alt="note" width="15" height="15">Blog</a>
+                    <a class="item" href="https://note.com/kokemori_trip"><img class="note" src="../static/img/logo/logo_symbol.png" alt="note" width="15" height="15">Blog</a>
                   </div>
                 </div>
                 <div class="seven wide column">
