--- a/pages/writtenInvestigationOfXX-X-XX08Chair/chairReports.html
+++ b/pages/writtenInvestigationOfXX-X-XX08Chair/chairReports.html
@@ -38,15 +38,15 @@
 	</head>
 	<body>
         <div class="ui main text container">
-            <h1 class="ui header">welcome to VIRchairL INSANITY Research Reports</h1>
-            <p>devloper : koki takeda</p>
+            <h1 class="ui header">Chair Reports</h1>
+            <p>XX区X丁目XX08椅子に関する実験及び報告の記録</p>
         </div>
         
         <div class="ui borderless main menu">
             <div class="ui text container">
                 <div class="header item">
                     <!--img class="logo" src="assets/images/logo.png"-->
-                    Home
+                    Chair Reports
                 </div>
                 <div class="ui floated dropdown item">
                     Index
@@ -60,6 +60,8 @@
                     List
                     <i class="dropdown icon"></i>
                     <div class="menu">
+                        <a href="../index.html" class="item">Home</a>
+                        <div class="divider"></div>
                         <div class="header">Reports</div>
                         <div class="item">ぶちょーのメモ</div>
                         <div class="item">委託調査申込書</div>
@@ -80,6 +82,12 @@
         </div>
         
         <div class="ui text container">
+            <h2 class="ui header">書式</h2>
+            <p>記録は以下の書式に従って記録<br>
+             No. xx<br>
+            接触物:<br>
+            （実験日：必要に応じて）<br>
+            実験結果もしくは報告: </p>
 
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
@@ -121,7 +129,7 @@
                   <div class="ui inverted link list">
                     <a class="item" href="https://twitter.com/bluewhitered123"><i class="twitter icon"></i>@bluewhitered123</a>
                     <a class="item" href="https://www.facebook.com/kouki.takeda.146"><i class="facebook icon"></i>koki takeda</a>
-                    <a class="item" href="https://note.com/kokemori_trip"><img class="note" src="static/img/logo/logo_symbol.png" alt="note" width="15" height="15">Blog</a>
+                    <a class="item" href="https://note.com/kokemori_trip"><img class="note" src="../static/img/logo/logo_symbol.png" alt="note" width="15" height="15">Blog</a>
                   </div>
                 </div>
                 <div class="seven wide column">
