委託調査申込書

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="ui borderless main menu">
             <div class="ui text container">
                 <div class="header item">
-                    <!--img class="logo" src="assets/images/logo.png"-->
+                    <i class="file icon"></i>
                     Home
                 </div>
                 <div class="ui floated dropdown item">
@@ -61,20 +61,20 @@
                     List
                     <i class="dropdown icon"></i>
                     <div class="menu">
-                        <a href="index.html" class="item">Home</a>
+                        <a href="index.html" class="item"><i class="file icon"></i>Home</a>
                         <div class="divider"></div>
                         <div class="header">Reports</div>
-                        <a href="pages/butchosMemo.html" class="item">ぶちょーのメモ</a>
-                        <a href="pages/requestForInvestigationForm.html" class="item">委託調査申込書</a>
+                        <a href="pages/butchosMemo.html" class="item"><i class="file icon"></i>ぶちょーのメモ</a>
+                        <a href="pages/requestForInvestigationForm.html" class="item"><i class="file icon"></i>委託調査申込書</a>
                         <div class="item">
-                            &nbsp;xx区x丁目xx08椅子に関する調査書
+                            &nbsp;<i class="folder icon"></i>xx区x丁目xx08椅子に関する調査書
                                 <div class="menu">
-                                    <div class="header">xx区x丁目xx08椅子に関する調査書</div>
-                                    <div class="item">調査に関して</div>
-                                    <a href="pages/chairReports.html" class="item">chair-reports</a>
-                                    <div class="item">disc-reports</div>
-                                    <div class="item">virtual-disc-reports</div>
-                                    <div class="item">unregistered-virtual-world-reports</div>
+                                    <div class="header"><i class="folder icon"></i>xx区x丁目xx08椅子に関する調査書</div>
+                                    <a href="pages/writtenInvestigationOfXX-X-XX08Chair/abstracts.html" class="item"><i class="file icon"></i>調査に関して</a>
+                                    <a href="pages/writtenInvestigationOfXX-X-XX08Chair/chairReports.html" class="item"><i class="file icon"></i>chair-reports</a>
+                                    <div class="item"><i class="file icon"></i>disc-reports</div>
+                                    <div class="item"><i class="file icon"></i>virtual-disc-reports</div>
+                                    <div class="item"><i class="file icon"></i>unregistered-virtual-world-reports</div>
                                 </div>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                         <div class="item">
                             <i class="file icon"></i>
                             <div class="content">
-                                <a href="/pages/requestForInvestigationForm.html">requestForInvestigationForm.html</a>
+                                <a href="pages/requestForInvestigationForm.html">requestForInvestigationForm.html</a>
                                 <div class="description">委託調査申込書の内容が記述されているファイルです。</div>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                                     <div class="item">
                                         <i class="file icon"></i>
                                         <div class="content">
-                                            <a href="index.html">abstracts.html</a>
+                                            <a href="pages/writtenInvestigationOfXX-X-XX08Chair/abstracts.html">abstracts.html</a>
                                             <div class="description">調査に関しての内容が記述されているファイルです。</div>
                                         </div>
                                     </div>
@@ -141,28 +141,28 @@
                                         <i class="file icon"></i>
                                         <div class="content">
                                             <a href="index.html">chairReports.html</a>
-                                            <div class="description">ぶちょーのメモの内容が記述されているファイルです。</div>
+                                            <div class="description">XX区X丁目XX08椅子に関する実験及び報告の記録の内容が記述されているファイルです。</div>
                                         </div>
                                     </div>
                                     <div class="item">
                                         <i class="file icon"></i>
                                         <div class="content">
-                                            <a href="index.html">ButchosMemo.html</a>
-                                            <div class="description">ぶちょーのメモの内容が記述されているファイルです。</div>
+                                            <a href="index.html">discReports.html</a>
+                                            <div class="description">XX区X丁目XX08椅子に関する内部にあった円盤状のオブジェクトに関する記録の内容が記述されているファイルです。</div>
                                         </div>
                                     </div>
                                     <div class="item">
                                         <i class="file icon"></i>
                                         <div class="content">
-                                            <a href="index.html">ButchosMemo.html</a>
-                                            <div class="description">ぶちょーのメモの内容が記述されているファイルです。</div>
+                                            <a href="index.html">virtualDiscReports.html</a>
+                                            <div class="description">XX区X丁目XX08椅子内部にあった円盤状のオブジェクトが記録していた仮想データ その内部にあった円盤状のオブジェクトの記録の内容が記述されているファイルです。</div>
                                         </div>
                                     </div>
                                     <div class="item">
                                         <i class="file icon"></i>
                                         <div class="content">
-                                            <a href="index.html">ButchosMemo.html</a>
-                                            <div class="description">ぶちょーのメモの内容が記述されているファイルです。</div>
+                                            <a href="index.html">unregisteredVirtualWorldReports.html</a>
+                                            <div class="description">XX区X丁目XX08椅子内部にあった円盤状のオブジェクトが記録していた仮想データ その内部にあった円盤状のオブジェクトが記録していたポータル その先の仮想世界に関する記録の内容が記述されているファイルです。</div>
                                         </div>
                                     </div>
                                 </div>
@@ -180,10 +180,10 @@
                 <div class="three wide column">
                   <h4 class="ui inverted header">List</h4>
                   <div class="ui inverted link list">
-                    <a href="index.html" class="item">Home</a>
-                    <a href="pages/butchosMemo.html" class="item">ぶちょーのメモ</a>
-                    <a href="#" class="item">委託調査申込書</a>
-                    <a href="#" class="item">xx区x丁目xx08椅子に関する調査書</a>
+                    <a href="index.html" class="item"><i class="file icon"></i>Home</a>
+                    <a href="pages/butchosMemo.html" class="item"><i class="file icon"></i>ぶちょーのメモ</a>
+                    <a href="pages/requestForInvestigationForm.html" class="item"><i class="file icon"></i>委託調査申込書</a>
+                    <a href="pages/writtenInvestigationOfXX-X-XX08Chair/abstracts.html" class="item"><i class="folder icon"></i>xx区x丁目xx08椅子に関する調査書</a>
                   </div>
                 </div>
                 <div class="three wide column">
