--- a/pages/butchosMemo.html
+++ b/pages/butchosMemo.html
@@ -46,31 +46,31 @@
         <div class="ui borderless main menu">
             <div class="ui text container">
                 <div class="header item">
-                    <!--img class="logo" src="assets/images/logo.png"-->
+                    <i class="file icon"></i>
                     ぶちょーのメモ
                 </div>
                 <div class="ui right floated dropdown item">
-                    List
-                    <i class="dropdown icon"></i>
-                    <div class="menu">
-                        <a href="../index.html" class="item">Home</a>
-                        <div class="divider"></div>
-                        <div class="header">Reports</div>
-                        <a href="../pages/butchosMemo.html" class="item">ぶちょーのメモ</a>
-                        <a href="../pages/requestForInvestigationForm.html" class="item">委託調査申込書</a>
-                        <div class="item">
-                            &nbsp;xx区x丁目xx08椅子に関する調査書
-                                <div class="menu">
-                                    <div class="header">xx区x丁目xx08椅子に関する調査書</div>
-                                    <div class="item">調査に関して</div>
-                                    <a href="../pages/chairReports.html" class="item">chair-reports</a>
-                                    <div class="item">disc-reports</div>
-                                    <div class="item">virtual-disc-reports</div>
-                                    <div class="item">unregistered-virtual-world-reports</div>
-                                </div>
-                        </div>
-                    </div>
-                </div>
+                  List
+                  <i class="dropdown icon"></i>
+                  <div class="menu">
+                      <a href="../index.html" class="item"><i class="file icon"></i>Home</a>
+                      <div class="divider"></div>
+                      <div class="header">Reports</div>
+                      <a href="butchosMemo.html" class="item"><i class="file icon"></i>ぶちょーのメモ</a>
+                      <a href="requestForInvestigationForm.html" class="item"><i class="file icon"></i>委託調査申込書</a>
+                      <div class="item">
+                          &nbsp;<i class="folder icon"></i>xx区x丁目xx08椅子に関する調査書
+                              <div class="menu">
+                                  <div class="header"><i class="folder icon"></i>xx区x丁目xx08椅子に関する調査書</div>
+                                  <a href="writtenInvestigationOfXX-X-XX08Chair/abstracts.html" class="item"><i class="file icon"></i>調査に関して</a>
+                                  <a href="writtenInvestigationOfXX-X-XX08Chair/chairReports.html" class="item"><i class="file icon"></i>chair-reports</a>
+                                  <div class="item"><i class="file icon"></i>disc-reports</div>
+                                  <div class="item"><i class="file icon"></i>virtual-disc-reports</div>
+                                  <div class="item"><i class="file icon"></i>unregistered-virtual-world-reports</div>
+                              </div>
+                      </div>
+                  </div>
+              </div>
             </div>
         </div>
         <!--share-->
@@ -98,31 +98,31 @@
         
         <!--share-->
         <div class="ui inverted vertical footer segment">
-            <div class="ui container">
-              <div class="ui stackable inverted divided equal height stackable grid">
-                <div class="three wide column">
-                  <h4 class="ui inverted header">List</h4>
-                  <div class="ui inverted link list">
-                    <a href="../index.html" class="item">Home</a>
-                    <a href="../pages/butchosMemo.html" class="item">ぶちょーのメモ</a>
-                    <a href="#" class="item">委託調査申込書</a>
-                    <a href="#" class="item">xx区x丁目xx08椅子に関する調査書</a>
-                  </div>
-                </div>
-                <div class="three wide column">
-                  <h4 class="ui inverted header">Devloper Contact</h4>
-                  <div class="ui inverted link list">
-                    <a class="item" href="https://twitter.com/bluewhitered123"><i class="twitter icon"></i>@bluewhitered123</a>
-                    <a class="item" href="https://www.facebook.com/kouki.takeda.146"><i class="facebook icon"></i>koki takeda</a>
-                    <a class="item" href="https://note.com/kokemori_trip"><img class="note" src="../static/img/logo/logo_symbol.png" alt="note" width="15" height="15">Blog</a>
-                  </div>
-                </div>
-                <div class="seven wide column">
-                  <h4 class="ui inverted header">License</h4>
-                  <p>特に指定がない限り、このサイトのすべてのコンテンツは<a href="https://creativecommons.org/licenses/by-sa/3.0/deed.ja">クリエイティブ・コモンズ 表示 - 継承3.0ライセンス</a> の元で利用可能です。</p>
+          <div class="ui container">
+            <div class="ui stackable inverted divided equal height stackable grid">
+              <div class="three wide column">
+                <h4 class="ui inverted header">List</h4>
+                <div class="ui inverted link list">
+                  <a href="../index.html" class="item"><i class="file icon"></i>Home</a>
+                  <a href="../pages/butchosMemo.html" class="item"><i class="file icon"></i>ぶちょーのメモ</a>
+                  <a href="../pages/requestForInvestigationForm.html" class="item"><i class="file icon"></i>委託調査申込書</a>
+                  <a href="../pages/writtenInvestigationOfXX-X-XX08Chair/abstracts.html" class="item"><i class="folder icon"></i>xx区x丁目xx08椅子に関する調査書</a>
                 </div>
               </div>
+              <div class="three wide column">
+                <h4 class="ui inverted header">Devloper Contact</h4>
+                <div class="ui inverted link list">
+                  <a class="item" href="https://twitter.com/bluewhitered123"><i class="twitter icon"></i>@bluewhitered123</a>
+                  <a class="item" href="https://www.facebook.com/kouki.takeda.146"><i class="facebook icon"></i>koki takeda</a>
+                  <a class="item" href="https://note.com/kokemori_trip"><img class="note" src="../static/img/logo/logo_symbol.png" alt="note" width="15" height="15">Blog</a>
+                </div>
+              </div>
+              <div class="seven wide column">
+                <h4 class="ui inverted header">License</h4>
+                <p>特に指定がない限り、このサイトのすべてのコンテンツは<a href="https://creativecommons.org/licenses/by-sa/3.0/deed.ja">クリエイティブ・コモンズ 表示 - 継承3.0ライセンス</a> の元で利用可能です。</p>
+              </div>
             </div>
+          </div>
         </div>
         <!--share-->
 	</body>
