fix semantic ui loading path

--- a/pages/writtenInvestigationOfXX-X-XX08Chair/chairReports.html
+++ b/pages/writtenInvestigationOfXX-X-XX08Chair/chairReports.html
@@ -10,30 +10,30 @@
         <!-- Site Properties -->
 		<link rel="stylesheet" type="text/css" href="../semantic/semantic.min.css">
 
-        <link rel="stylesheet" type="text/css" href="../semantic/components/reset.css">
-        <link rel="stylesheet" type="text/css" href="../semantic/components/site.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/reset.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/site.css">
 
-        <link rel="stylesheet" type="text/css" href="../semantic/components/container.css">
-        <link rel="stylesheet" type="text/css" href="../semantic/components/grid.css">
-        <link rel="stylesheet" type="text/css" href="../semantic/components/header.css">
-        <link rel="stylesheet" type="text/css" href="../semantic/components/image.css">
-        <link rel="stylesheet" type="text/css" href="../semantic/components/menu.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/container.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/grid.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/header.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/image.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/menu.css">
 
-        <link rel="stylesheet" type="text/css" href="../semantic/components/divider.css">
-        <link rel="stylesheet" type="text/css" href="../semantic/components/list.css">
-        <link rel="stylesheet" type="text/css" href="../semantic/components/segment.css">
-        <link rel="stylesheet" type="text/css" href="../semantic/components/dropdown.css">
-        <link rel="stylesheet" type="text/css" href="../semantic/components/icon.css">
-        <link rel="stylesheet" type="text/css" href="../semantic/components/transition.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/divider.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/list.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/segment.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/dropdown.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/icon.css">
+        <link rel="stylesheet" type="text/css" href="../../semantic/components/transition.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="../semantic/semantic.min.js"></script>
-        <script src="../semantic/components/transition.js"></script>
-        <script src="../semantic/components/dropdown.js"></script>
-        <script src="../semantic/components/visibility.js"></script>
+        <script src="../../semantic/semantic.min.js"></script>
+        <script src="../../semantic/components/transition.js"></script>
+        <script src="../../semantic/components/dropdown.js"></script>
+        <script src="../../semantic/components/visibility.js"></script>
 
-        <script src="../static/script/main.js"></script>
-        <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+        <script src="../../static/script/main.js"></script>
+        <link rel="stylesheet" type="text/css" href="../../static/css/main.css">
 
 	</head>
 	<body>
